--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -11,5 +11,18 @@
     <h2> {{ curso }} </h2>
 
     <h3> {{ outro }} </h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Produto</th>
+                <th>Preço</th>
+            <tr>
+        </thead>            
+            {% for produto in produtos %}
+                <tr>
+                <td><a href="{% url 'produto' produto.id %}">{{ produto.nome }} </a></td>
+                <td>{{produto.preco}}</td>    
+            {% endfor %}
+    </table>
 </body>
 </html>
